<resources>
    <string name="app_name">Weyala Driver</string>
    <string name="title_activity_maps">Weyala Driver</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="register_notification">Please fill out the form correctly</string>
    <string name="action_settings">Settings</string>
    <string name="update_my_location">Reload</string>
    <string name="nav_sub_title">Get Clients Easily</string>
    <string name="my_location">My Location</string>
    <string name="btn_login">Login</string>
    <string name="hint_name">Enter Name</string>
    <string name="hint_phone">Enter Phone Number (09xxxxxx)</string>
    <string name="hint_licence">Enter Licence Number</string>
    <string name="hint_car_model">Enter Car Model</string>
    <string name="hint_plate_number">Enter Plate Number</string>
    <string name="hint_station">Enter Default Station</string>
    <string name="call">Call to get Taxi</string>
    <string name="show_map">Show Client</string>
    <string name="change_map_type">Change Map Type</string>
    <string name="comment">Send Comment</string>
    <string name="comment_your">Your Comment</string>
    <string name="comment_write">Write your Comment here</string>
    <string name="comment_sending">Sending the comment ...</string>
    <string name="register_owner">Are you the car owner?</string>
    <string name="register_roof_rack">Does the car have roof rack?</string>

    <string name="about">Weyala is a platform that connects clients (taxi users) with taxi drivers easily.</string>
    <string name="about_developer">Developed By Brain Up Tech</string>

    <string name="yes">Yes </string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="availability">Availability</string>
    <string name="no_client">You do not have new client yet.</string>


    <string name="err_msg_name">Enter your full name here</string>
    <string name="err_msg_phone">Enter a valid phone number</string>
    <string name="err_msg_plate">Enter a valid plate number</string>
    <string name="err_msg_licence">Enter a valid licence number</string>
    <string name="err_msg_car_model">Enter a valid Car Model</string>
    <string name="err_msg_comment">Enter comment properly</string>
    <string name="new_client">You have new client.</string>
    <string name="error_general">An error occurred. Please try again.</string>
    <string name="error_connection">Connection error. Please try again.</string>

    <string-array name="service_type">
        <item name="taxi">Taxi Service</item>
        <item name="contact">Daily Contract</item>
        <item name="rental">Rental</item>
    </string-array>

    <string name="notification_bundle_key">newDriver</string>
    <string name="response_ok">ok</string>
    <string name="response_data">data</string>
    <string name="response_error">error</string>

    <string name="nav_home">Home</string>
    <string name="nav_about">About</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_share">Share App</string>
    <string name="nav_rate">Rate App</string>
    <string name="nav_comment">Comment</string>
    <string name="nav_exit">Exit</string>
    <string name="nav_lang">Change Language</string>
    <string name="nav_communicate">Communicate</string>


    <string name="toast_availability_on">Availability is ON!</string>
    <string name="toast_availability_off">Availability is OFF!</string>
    <string name="toast_status_sent_ok">Status is sent to server</string>
    <string name="toast_status_sent_error">Status is not sent to server. </string>
    <string name="toast_reload">Data is reloaded. \nPrevious client info has been removed. \nThe map is also set to your current location.</string>
    <string name="toast_comment_ok">Your comment has been sent! Thank you!</string>
    <string name="toast_comment_error">Sorry something went wrong. \nYour comment is not sent. Please try again.</string>
    <string name="toast_register_ok_new">Your Account has been successfully created.</string>
    <string name="toast_register_ok_update">We found an account with this phone number. We have updated your info with your new data</string>
    <string name="toast_permission_denied">Permission denied! Please Grant Permission. </string>
    <string name="toast_permission_granted">Permission granted! Thank you! </string>

    <string name="dialog_creating_account">Creating account .. </string>
    <string name="dialog_select_language">Select Language / ቋንቋ ምረጥ</string>

    <string name="no_connection_found">No connection found! Please open cellular data or connect to wifi for the app to work properly.</string>
    <string name="no_gps_found">GPS is not enabled. Do you want to go to settings menu?</string>

    <string name="logout_title">Are you sure you want to Logout?</string>
    <string name="fb_link">https://facebook.com/HelloWeyala/</string>


</resources>
